--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Stewart</span>
+                <span id="name">Stewart,</span>
             </h1>
-            <p class="two" id="greetingText">We've all enjoyed you hanging around our team lately!</p>
+            <p class="two" id="greetingText">we are thrilled that you could find some time for lunch with your favorite clinicians on your birthday...</p>
         </div>
 
         <div class="three">
-            <p>Now, it's your birthday!! :D</p>
+            <p>and yes Brockton, you are included in that as well ;D</p>
         </div>
 
         <div class="four">
@@ -46,7 +46,7 @@
         </div>
 
         <div class="five">
-            <p class="idea-1">That's what everyone expects from their team.</p>
+            <p class="idea-1">A simple and easy email or message is what everyone expects from teammates.</p>
             <p class="idea-2">But we held our horses...</p>
             <p class="idea-3">
                 and realized we needed something<br>
@@ -105,8 +105,8 @@
         </div>
 
         <div class="nine">
-            <p>Okay, now come back and tell me if you liked it.</p>
-            <p id="replay">Or click, if you want to watch it again.</p>
+            <p>Okay, now that we have your attention, are you up for some more?.</p>
+            <p id="replay">Or click HERE if you need a redo.</p>
             <p class="last-smile">:)</p>
         </div>
     </div>
