--- a/index.html
+++ b/index.html
@@ -110,18 +110,15 @@
             </div>
         </div>
 
-        <div class="eight">
-            <button id="continue-btn">CONTINUE</button>
+        <div class="url-display">
+            <a href="https://share.bmarquardt.us/-nLCHHa4zuQ" class="url-text">https://share.bmarquardt.us/-nLCHHa4zuQ</a>
         </div>
 
-        <video id="birthday-video" class="birthday-video" controls style="display: none;">
-            <source src="./video/continue-video.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
     </div>
 
     <!-- Greensock -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script type="application/javascript" src="./script/main.js"></script>
+
 </body>
 </html>
