--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         </div>
 
         <div class="url-display">
-            <a href="https://share.bmarquardt.us/-nLCHHa4zuQ" class="url-text">https://share.bmarquardt.us/-nLCHHa4zuQ</a>
+            <a href="https://share.bmarquardt.us/-nLCHHa4zuQ" class="url-text">JUST CLICK ME!</a>
         </div>
 
     </div>
