--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Stewart,</span>
+                <span id="name">Hi, Stewart!</span>
             </h1>
-            <p class="two" id="greetingText">we are thrilled that you could find some time for lunch with your favorite clinicians on your birthday...</p>
+            <p class="two" id="greetingText">We are thrilled that you could find the time to hang out with your favorite clinicians at the bar...</p>
         </div>
 
         <div class="three">
@@ -52,8 +52,8 @@
         </div>
 
         <div class="five">
-            <p class="idea-1">A simple and easy email or message is what everyone expects from teammates.</p>
-            <p class="idea-2">But we held our horses...</p>
+            <p class="idea-1">A simple email or message is what everyone typically expects from teammates...</p>
+            <p class="idea-2">but we held our horses...</p>
             <p class="idea-3">
                 and realized we needed something<br>
                 <strong>SPECIAL</strong>
