--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
     <div class="container">
         <div class="one">
-            <h1 class="one">
-                Hi
+            <h1 class="one"
                 <span id="name">Hi, Stewart!</span>
             </h1>
             <p class="two" id="greetingText">We are thrilled that you could find the time to hang out with your favorite clinicians at the bar...</p>
