--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
         Your browser isn't invited for super fun audio time.
     </audio>
 
+    <div class="start-screen">
+        <button id="start-btn" class="start-btn">Start</button>
+    </div>
+
     <div class="container">
         <div class="one">
-            <h1 class="one"
+            <h1 class="one">
                 <span id="name">Hi, Stewart!</span>
             </h1>
             <p class="two" id="greetingText">We are thrilled that you could find the time to hang out with your favorite clinicians at the bar...</p>
