--- a/index.html
+++ b/index.html
@@ -104,17 +104,15 @@
                 <img src="img/ballon3.svg" alt="" />
                 <img src="img/ballon1.svg" alt="" />
                 <img src="img/ballon2.svg" alt="" />                
-                <img src="img/ballon3.svg" alt="" />
+                <img src="img/ballon3
+
+.svg" alt="" />
                 <img src="img/ballon2.svg" alt="" />
                 <img src="img/ballon1.svg" alt="" />
                 <img src="img/ballon3.svg" alt="" />
                 <img src="img/ballon2.svg" alt="" />
                 <img src="img/ballon3.svg" alt="" />
             </div>
-        </div>
-
-        <div class="url-display">
-            <a href="https://share.bmarquardt.us/-nLCHHa4zuQ" class="url-text">JUST CLICK ME!</a>
         </div>
 
     </div>
