--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
                 <img src="img/ballon3.svg" alt="" />
                 <img src="img/ballon1.svg" alt="" />
                 <img src="img/ballon2.svg" alt="" />                
-                <img src="img/ballon3
-
-.svg" alt="" />
+                <img src="img/ballon3.svg" alt="" />
                 <img src="img/ballon2.svg" alt="" />
                 <img src="img/ballon1.svg" alt="" />
                 <img src="img/ballon3.svg" alt="" />
