--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
         </div>
 
         <div class="six">
-            <img src="./img/stewart.jpg" alt="profile" class="profile-picture" id="imagePath"/>
-            <img src="img/hat.svg" alt="hat" class="hat" />
+            <img src="./img/stewart-with-hat.png" alt="profile" class="profile-picture" id="imagePath"/>
             <div class="wish">
                 <h3 class="wish-hbd">Happy 50th Birthday, Stewart!</h3>
                 <h5 id="wishText">May the winds remain calm when you are dancing in your kilt! ;)</h5>
