--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Your browser isn't invited for super fun audio time.
     </audio>
 
-    <audio class="song" loop>
+    <audio class="song">
         <source src="./music/tysonsong.mp3">
         </source>
         Your browser isn't invited for super fun audio time.
